@@ -3,82 +3,125 @@ package com.example.blog_app.services.implement;
 import com.example.blog_app.exceptions.DuplicateResourceException;
 import com.example.blog_app.exceptions.ImmutableResourceException;
 import com.example.blog_app.exceptions.ResourceNotFoundException;
-import com.example.blog_app.models.dtos.PermissionDto;
+import com.example.blog_app.models.dtos.PermissionRequestDto;
+import com.example.blog_app.models.dtos.PermissionResponseDto;
 import com.example.blog_app.models.entities.Permission;
+import com.example.blog_app.models.mappers.PermissionMapper;
 import com.example.blog_app.repositories.PermissionRepository;
 import com.example.blog_app.services.PermissionService;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * Implementation of the {@link PermissionService} interface for managing permissions.
+ *
+ * <p>This service provides the business logic for creating, updating, retrieving,
+ * and deleting permissions. Immutable permissions cannot be modified or deleted.</p>
+ *
+ * @see PermissionService
+ */
 @Service
 public class PermissionServiceImpl implements PermissionService {
 
     private final PermissionRepository permissionRepository;
-    private final ModelMapper modelMapper;
+    private final PermissionMapper permissionMapper;
 
-    public PermissionServiceImpl(PermissionRepository permissionRepository, ModelMapper modelMapper) {
+    /**
+     * Constructs the PermissionServiceImpl with required dependencies.
+     *
+     * @param permissionRepository the repository for managing permissions
+     * @param permissionMapper     the mapper for converting between entities and DTOs
+     */
+    public PermissionServiceImpl(PermissionRepository permissionRepository, PermissionMapper permissionMapper) {
         this.permissionRepository = permissionRepository;
-        this.modelMapper = modelMapper;
+        this.permissionMapper = permissionMapper;
     }
 
+    /**
+     * Creates a new permission.
+     *
+     * @param permissionDto the DTO containing the details of the permission to create
+     * @return the created permission as a {@link PermissionResponseDto}
+     * @throws DuplicateResourceException if a permission with the same name already exists
+     */
     @Override
-    public PermissionDto createPermission(PermissionDto permissionDto) {
+    public PermissionResponseDto createPermission(PermissionRequestDto permissionDto) {
         if (permissionRepository.findByName(permissionDto.getName()).isPresent()) {
-            throw new DuplicateResourceException("Permission already exists: " + permissionDto.getName());
+            throw new DuplicateResourceException("Permission already exists with name: " + permissionDto.getName());
         }
 
-        Permission permission = this.dtoToPermission(permissionDto);
+        Permission permission = permissionMapper.toEntity(permissionDto);
         Permission savedPermission = permissionRepository.save(permission);
-        return this.permissionToDto(savedPermission);
+        return permissionMapper.toResponseDto(savedPermission);
     }
 
+    /**
+     * Updates an existing permission by its ID.
+     *
+     * @param permissionDto the DTO containing the updated details of the permission
+     * @param id            the ID of the permission to update
+     * @return the updated permission as a {@link PermissionResponseDto}
+     * @throws ResourceNotFoundException  if no permission is found with the given ID
+     * @throws ImmutableResourceException if the permission is marked as immutable
+     */
     @Override
-    public PermissionDto updatePermission(PermissionDto permissionDto, String permissionName) {
-        if(permissionRepository.findByName(permissionName).isEmpty()){
-            throw new ResourceNotFoundException("Permission does not exist: " + permissionName);
+    public PermissionResponseDto updatePermissionById(PermissionRequestDto permissionDto, Long id) {
+        Permission permission = permissionRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Permission not found with ID: " + id));
+
+        if (permission.isImmutable()) {
+            throw new ImmutableResourceException("Cannot modify immutable permission with ID: " + id);
         }
 
-        if(permissionRepository.findByName(permissionName).get().isImmutable()){
-            throw new ImmutableResourceException("Can not modify default permission: " + permissionName);
-        }
-
-        Permission permission = permissionRepository.findByName(permissionName).get();
         permission.setName(permissionDto.getName());
-        Permission savedPermission = permissionRepository.save(permission);
-        return this.permissionToDto(savedPermission);
+        Permission updatedPermission = permissionRepository.save(permission);
+        return permissionMapper.toResponseDto(updatedPermission);
     }
 
+    /**
+     * Retrieves the details of a permission by its ID.
+     *
+     * @param id the ID of the permission to retrieve
+     * @return the permission as a {@link PermissionResponseDto}
+     * @throws ResourceNotFoundException if no permission is found with the given ID
+     */
     @Override
-    public List<PermissionDto> getAllPermissions() {
-        return this.permissionRepository.findAll()
+    public PermissionResponseDto getPermissionById(Long id) {
+        Permission permission = permissionRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Permission not found with ID: " + id));
+        return permissionMapper.toResponseDto(permission);
+    }
+
+    /**
+     * Retrieves a list of all permissions.
+     *
+     * @return a list of all permissions as {@link PermissionResponseDto}
+     */
+    @Override
+    public List<PermissionResponseDto> getAllPermissions() {
+        return permissionRepository.findAll()
                 .stream()
-                .map(this::permissionToDto)
-                .collect(Collectors.toList());
+                .map(permissionMapper::toResponseDto)
+                .toList();
     }
 
+    /**
+     * Deletes a permission by its ID.
+     *
+     * @param id the ID of the permission to delete
+     * @throws ResourceNotFoundException  if no permission is found with the given ID
+     * @throws ImmutableResourceException if the permission is marked as immutable
+     */
     @Override
-    public void deletePermission(String permissionName) {
-        if(permissionRepository.findByName(permissionName).isEmpty()){
-            throw new ResourceNotFoundException("Permission does not exist: " + permissionName);
+    public void deletePermissionById(Long id) {
+        Permission permission = permissionRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Permission not found with ID: " + id));
+
+        if (permission.isImmutable()) {
+            throw new ImmutableResourceException("Cannot delete immutable permission with ID: " + id);
         }
 
-        if(permissionRepository.findByName(permissionName).get().isImmutable()){
-            throw new ImmutableResourceException("Can not remove default permission: " + permissionName);
-        }
-
-        Permission permission = permissionRepository.findByName(permissionName).get();
         permissionRepository.delete(permission);
-    }
-
-    private PermissionDto permissionToDto(Permission permission){
-        return modelMapper.map(permission, PermissionDto.class);
-    }
-
-    private Permission dtoToPermission(PermissionDto permissionDto){
-        return modelMapper.map(permissionDto, Permission.class);
     }
 }
